<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_inquiry"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/teal_200"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/toolbar_imageview_inquiry_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/baseline_arrow_back_24" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/textview_inquiry_line1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:gravity="center"
        android:text="@string/textview_inquiry_line1"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_inquiry" />

    <TextView
        android:id="@+id/textview_inquiry_line2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/textview_inquiry_line2"
        android:textColor="@color/purple_500"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_inquiry_line1" />

    <TextView
        android:id="@+id/textview_inquiry_line3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/textview_inquiry_line3"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_inquiry_line2" />

    <TextView
        android:id="@+id/textview_inquiry_line4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/textview_inquiry_line4"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_inquiry_line3" />

    <Button
        android:id="@+id/button_inquiry_yes"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:backgroundTint="@color/black"
        android:text="@string/button_yes"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_inquiry_no"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_inquiry_no"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:backgroundTint="@color/black"
        android:text="@string/button_no"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/button_inquiry_yes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_inquiry_yes"
        app:layout_constraintTop_toTopOf="@+id/button_inquiry_yes" />

</androidx.constraintlayout.widget.ConstraintLayout>